[frontend][registration] registration form implemented [backend][users] method updated

--- a/finted-frontend-angular/src/app/app.component.html
+++ b/finted-frontend-angular/src/app/app.component.html
@@ -34,4 +34,6 @@
       </div>
     </div>
   </nav>
+  <!-- <app-homepage></app-homepage> -->
+  <app-registration-form></app-registration-form>
 </body>
