--- a/finted-frontend-angular/src/app/app.component.html
+++ b/finted-frontend-angular/src/app/app.component.html
@@ -34,6 +34,7 @@
       </div>
     </div>
   </nav>
-  <!-- <app-homepage></app-homepage> -->
   <app-registration-form></app-registration-form>
+  <app-post-form></app-post-form>
+  <app-debug></app-debug>
 </body>
