--- a/finted-frontend-angular/src/app/app.component.html
+++ b/finted-frontend-angular/src/app/app.component.html
@@ -36,5 +36,6 @@
   </nav>
   <app-registration-form></app-registration-form>
   <app-post-form></app-post-form>
+  <app-post-list-visualization></app-post-list-visualization>
   <app-debug></app-debug>
 </body>
