[backend] post publishing update [frontend][angular] post and user registration update

--- a/finted-frontend-angular/src/app/post-form/post-form.component.html
+++ b/finted-frontend-angular/src/app/post-form/post-form.component.html
@@ -30,14 +30,7 @@
       </div>
       <div>
         <label for="image" class="form-label">Inserisci un'immagine</label>
-        <input
-          class="form-control form-control-lg"
-          id="image"
-          formControlName="image"
-          accept="image/*"
-          type="file"
-          (change)="onChange($event)"
-        />
+        <input id = "image" type="file" formControlName="image" (change)="onFileSelected($event)" accept="image/jpeg">
       </div>
 
       <div class="my-6">
