--- a/finted-frontend-angular/src/app/post-list-visualization/post-list-visualization.component.html
+++ b/finted-frontend-angular/src/app/post-list-visualization/post-list-visualization.component.html
@@ -3,20 +3,7 @@
       class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative"
     >
       <div class="col-auto d-none d-lg-block">
-        <svg
-          class="bd-placeholder-img"
-          width="200"
-          height="250"
-          xmlns="http://www.w3.org/2000/svg"
-          role="img"
-          aria-label="Placeholder: Thumbnail"
-          preserveAspectRatio="xMidYMid slice"
-          focusable="false"
-        >
-          <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="#55595c" />
-          <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-        </svg>
+        <img [src]="result.postImage" alt="Immagine del post" width="200" height="250">
       </div>
       <div class="col p-4 d-flex flex-column position-static">
         <h3 class="mb-0">{{result.title}}</h3>
